[project]
name = "hh-autoapply-bot"
version = "0.1.0"
description = "Telegram bot for auto-applying to hh.ru vacancies"
requires-python = ">=3.11"
dependencies = [
    # Telegram bot
    "aiogram==3.13.1",
    # Web/API
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    # DB
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.13.3",
    # Redis
    "redis==5.2.0",
    # Config
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    # Logging
    "structlog==24.4.0",
    # Crypto
    "cryptography==43.0.3",
    # HTTP
    "httpx==0.27.2",
    # AI (used from stage 7+, included now to avoid rebuild later)
    "openai==1.54.3",
    # Utils
    "python-dateutil==2.9.0.post0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*", "core*", "api*", "workers*"]
